generic classes com, peerdescriptor, new nectwork and callgraph structure